VERSION 1.2.0
-------------

FEATURES:

    o Add functionality for analysing VCF files containing unannotated variants
    o Mitochondrial variants can now be optionally skipped when reading SNV
      profiles in the `read_variants` function
    o Add the `list_variants` function for listing the genotypes of
      user-specified variants in each provided SNV profile
    o Add the `plot_variant_list` function for plotting a genotype grid for
      each variant output by the `list_variants` function

FIXES:

    o Fix a multi-sample VCF profile creation issue (python only)
    o Reading zero-variant profiles now properly returns a GRanges object with
      a dummy-variant profile containing the sample name

VERSION 1.0.0
-------------

FEATURES:

    o Create single nucleotide variant (SNV) profiles from RNA/DNA-seq samples
    o Characterise the biological equivalency and difference between samples
    o Evaluate putative impacts of SNVs differing between samples
    o Investigate and validate known variants and specific genomic regions
    o Authenticate cell lines with a known SNV profile or the COSMIC database